syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    StockOpenMark records are created during the end-of-day rotation for each ticker and intended for use the following trading day.
*/    
message StockOpenMark {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    float sr_cls_prc = 103; // SR open mark; [SR close market (close - 1 min) from previous day; overnight adjusted]
    float close_prc = 106; // exchange open mark; [exchange close mark from previous day; overnight adjusted]
    float bid_prc = 109; // bid price [SR closing bid (close - 1 min) from previous day; overnight adjusted]
    float ask_prc = 112; // ask price [SR closing ask (close - 1 min) from previous day; overnight adjusted]
    string corp_action = 115;
    google.protobuf.Timestamp timestamp = 118;
}


