syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    OptionOpenMark records are created during the end-of-day rotation for each product and intended for use the following trading day.
*/    
message OptionOpenMark {
    message PKey {
        
        OptionKey okey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    OpnMarkState opn_mark_state = 191; // Preview or Final (note: preview is not corp action adjusted)
    double u_sr_cls = 109; // SR open uMark; [SR close uMark (C - 5m) overnight adjusted]
    double u_close = 112; // exchange open uMark; [exchange close uMark overnight adjusted]
    double sr_cls_prc = 121; // SR open mark; [SR close mark (close - 5m) overnight adjusted]
    double close_prc = 124; // exchange open mark; [exchange close mark overnight adjusted] [if available]
    float sr_prc = 133; // SR open surface price; [SR close surface price overnight adjusted]
    float sr_vol = 136; // SR surface volatility
    MarkSource sr_src = 139;
    float de = 142; // greeks from SR surface volatility
    float ga = 145;
    float th = 148;
    float ve = 151;
    float vo = 154; // volga (SR surface)
    float va = 157; // vanna (SR surface)
    float rh = 160;
    float ph = 163;
    float sr_slope = 166; // surface slope (SR surface)
    float de_decay = 169;
    float sdiv = 172; // term sdiv (stock dividend) rate
    float ddiv = 175; // sum of discrete dividends
    float ddiv_pv = 192; // sum of present value of discrete dividends
    float rate = 178; // term discount rate
    float years = 181; // years to expiration
    int32 error = 184; // pricing calc error (0 = none)
    string corp_action = 187;
    google.protobuf.Timestamp config_now = 193; // timestamp in the trading period local timezone
    google.protobuf.Timestamp timestamp = 190;
}


